# demoscene

./: Cargo.toml  README.md
docs/: abstract_algebra.md  differential_geometry.md  linear_alebgra.md
src/: app.rs  demo_single_triangle.rs  demo_window.rs  egui_renderer.rs  gpu_context.rs  main.rs
src/affine_transforms/: cone.rs  demo.rs  demo.wgsl  mod.rs
src/bare_window/: demo.rs
src/box_blur_2d/: box_blur_2d.wgsl  demo.rs  mod.rs
src/egui_inside/: demo.rs
src/icosahedron/: demo.rs  demo.wgsl  icosahedron.rs  mod.rs
src/icosphere/: demo.rs  demo.wgsl  icosphere.rs  mod.rs
src/single_triangle/: demo.rs  demo.wgsl  mod.rs
