[package]
name = "demoscene"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.1"
clap = { version = "4.5", features = ["derive"] }
egui = "0.32"
egui-wgpu = "0.32"
egui-winit = "0.32"
image = "0.25.6"
nalgebra = "0.33.2"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"
